Fix Overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,6 @@
 body {
     font-family: "Prompt", sans-serif;
     background-color: #0F1624;
-    overflow-x: hidden;
-    overflow-y: auto;
    
 }
 
